--- a/styles/about.css
+++ b/styles/about.css
@@ -12,6 +12,8 @@ body {
   
   h2 {
     font-size: 1.5em;
+    font-style: italic;
+    padding: (8);
   }
   
   .job-title {
@@ -26,4 +28,8 @@ body {
   a:hover {
     text-decoration: none;
     color: green;
+  }
+
+  ul {
+    border: 4px purple solid;
   }
